Code cleanup and modernization
- Modernized Java syntax by replacing `switch` statements with `switch` expressions and implementing pattern matching.
- Updated collection handling to use modern APIs, including `List.getFirst()`, `removeFirst()`, `getLast()`, and `Map.computeIfAbsent()`.
- Improved null safety and robustness in `InstallerXAdapterDividerItemDecoration`, `BaseBottomSheetDialogFragment`, and `SaiExportedAppMeta2`.
- Cleaned up unused member variables and localized `Context` usage across multiple providers, installers, and view models.
- Updated Gradle wrapper to 9.6.1.
- Refined logic in `DonationStatus` and Shell availability checks (`SuShell`, `ShizukuShell`).
- Added `@NonNull` annotations to `RecyclerView` components and updated manifest lint suppressions for storage and package visibility policies.
- Simplified `MathUtils` and `Coolbar` measurement logic.